--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,14 +23,15 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        server-id: lionarius-reposilite # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        server-id: lionarius-reposilite
+        server-username: ${{ secrets.REPOSILITE_USERNAME }}
+        server-password: ${{ secrets.REPOSILITE_PASSWORD }}
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
     - name: Publish to Reposilite
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn deploy
       env:
-        REPOSILITE_USERNAME: ${{ secrets.REPOSILITE_USERNAME }}
-        REPOSILITE_PASSWORD: ${{ secrets.REPOSILITE_PASSWORD }}
+        MAVEN_USERNAME: ${{ secrets.REPOSILITE_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.REPOSILITE_PASSWORD }}
