--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,8 +24,8 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         server-id: lionarius-reposilite
-        server-username: ${{ secrets.REPOSILITE_USERNAME }}
-        server-password: ${{ secrets.REPOSILITE_PASSWORD }}
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
