--- a/apache/pom.xml
+++ b/apache/pom.xml
@@ -29,6 +29,14 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 
