--- a/java11/pom.xml
+++ b/java11/pom.xml
@@ -18,6 +18,14 @@
             <artifactId>java-client</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
